[gd_scene load_steps=2 format=1]

[ext_resource path="res://script/Background_music_transition.gd" type="Script" id=1]

[node name="Background_music_transition" type="Node"]

script/script = ExtResource( 1 )

[node name="Stream_player_1" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 3.0
stream/buffering_ms = 500

[node name="Stream_player_2" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 3.0
stream/buffering_ms = 500

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="tween_complete" from="Tween" to="." method="_on_Tween_tween_complete"]


